# Email-Generator

./: main.py  pyproject.toml
